CRUD with psql FULL
