# Article_psql/models/common.go
@@ -1,0 +1,21 @@
+package models
+
+type DefaultError struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	Code    int    `json:"code"`
+}
+
+type SuccessResponse struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
+
+type Query struct {
+	Offset int    `json:"offset"`
+	Limit  int    `json:"limit"`
+	Search string `json:"search"`
+}
